manifest/argocd-app.yaml
# argocd-app.yaml
apiVersion: v1
kind: Service   
metadata:
  name: argocd-app-service
spec:
  selector:
    app.kubernetes.io/name: argocd-app
  type: NodePort
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-app-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-app
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-app
    spec:
      containers:
      - name: argocd-app-container
        image: dockerlecturer/app-with-argocd:183f2a99ed25c6ba2570086833118202aacd0698
        ports:
          - protocol: TCP
            containerPort: 8080
